--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+logging.level.com.spo.springit=TRACE
 
+info.application.name=Springit
+info.application.description=Reddit clone using Spring Boot 2
+info.application.version=0.0.1
+
+management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=*
+
+spring.devtools.livereload.enabled=true
+spring.devtools.livereload.port=8081
