added database properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,16 @@ management.endpoints.web.exposure.include=*
 
 spring.devtools.livereload.enabled=true
 spring.devtools.livereload.port=8081
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+#datasource (default to testdb)
+spring.datasource.name=springit
+# sa | empty password
+#spring.datasource.username=
+#spring.datasource.password=
+
+#JPA & Hibernate
+#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
